--- a/codekit-config.json
+++ b/codekit-config.json
@@ -2,6 +2,17 @@
   "CodeKitInfo" : "This is a CodeKit project configuration file. It is designed to sync project settings across multiple machines. Modifying the contents of this file can be a poor life decision if you don't know what you're doing. This file is not useful unless accompanied by the project that created it in CodeKit. For more information, see: http:\/\/incident57.com\/codekit",
   "creatorBuild" : "8248",
   "files" : {
+    "\/js\/custom\/hubJS.abbrev.js" : {
+      "ignoreWasSetByUser" : 1,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/custom\/hubJS.abbrev.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/js\/hubJS.abbrev.min.js",
+      "fileType" : 64
+    },
     "\/css\/less\/color-light.less" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -68,6 +79,15 @@
       "outputAbbreviatedPath" : "\/js\/widgetCreator.min.js",
       "fileType" : 64
     },
+    "\/examples\/widget.without.jquery.html" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/examples\/widget.without.jquery.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
+    },
     "\/css\/less\/type.less" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -87,9 +107,46 @@
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
       "inputAbbreviatedPath" : "\/css\/less\/widget-dark.less",
-      "outputStyle" : 0,
+      "outputStyle" : 2,
       "shouldRunBless" : 0,
       "outputAbbreviatedPath" : "\/css\/widget-dark.css",
+      "strictImports" : 0,
+      "fileType" : 1,
+      "debugStyle" : 0
+    },
+    "\/js\/manifests\/hubwidget.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/manifests\/hubwidget.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/js\/hubwidget.min.js",
+      "fileType" : 64
+    },
+    "\/css\/less\/variables.less" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/css\/less\/variables.less",
+      "outputStyle" : 0,
+      "shouldRunBless" : 0,
+      "outputAbbreviatedPath" : "\/css\/variables.css",
+      "strictImports" : 0,
+      "fileType" : 1,
+      "debugStyle" : 0
+    },
+    "\/css\/less\/utility.less" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/css\/less\/utility.less",
+      "outputStyle" : 0,
+      "shouldRunBless" : 0,
+      "outputAbbreviatedPath" : "\/css\/utility.css",
       "strictImports" : 0,
       "fileType" : 1,
       "debugStyle" : 0
@@ -107,19 +164,6 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
-    "\/css\/less\/variables.less" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/css\/less\/variables.less",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "\/css\/variables.css",
-      "strictImports" : 0,
-      "fileType" : 1,
-      "debugStyle" : 0
-    },
     "\/tests\/widgetCreator\/index.html" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -128,30 +172,6 @@
       "inputAbbreviatedPath" : "\/tests\/widgetCreator\/index.html",
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2048
-    },
-    "\/js\/manifests\/hubwidget.js" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/manifests\/hubwidget.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/hubwidget.min.js",
-      "fileType" : 64
-    },
-    "\/css\/less\/utility.less" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/css\/less\/utility.less",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "\/css\/utility.css",
-      "strictImports" : 0,
-      "fileType" : 1,
-      "debugStyle" : 0
     },
     "\/js\/jquery.hubwidget.min.js" : {
       "ignoreWasSetByUser" : 0,
@@ -175,17 +195,6 @@
       "initialSize" : 855,
       "fileType" : 8192
     },
-    "\/js\/lib\/hubJS.js" : {
-      "ignoreWasSetByUser" : 1,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/lib\/hubJS.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/hubJS.min.js",
-      "fileType" : 64
-    },
     "\/js\/manifests\/jquery.hubwidget.js" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -208,15 +217,6 @@
       "outputAbbreviatedPath" : "\/hubwidget.min.min.js",
       "fileType" : 64
     },
-    "\/examples\/widget.html" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/examples\/widget.html",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
-    },
     "\/images\/widget-hubpower-dark.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -228,6 +228,15 @@
       "initialSize" : 857,
       "fileType" : 8192
     },
+    "\/examples\/widget.with.jquery.html" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/examples\/widget.with.jquery.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
+    },
     "\/css\/widget-light.css" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -236,6 +245,26 @@
       "inputAbbreviatedPath" : "\/css\/widget-light.css",
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 16
+    },
+    "\/js\/custom\/jqueryExists.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/custom\/jqueryExists.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/js\/jqueryExists.min.js",
+      "fileType" : 64
+    },
+    "\/tests\/jqExists\/with.html" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/tests\/jqExists\/with.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
     },
     "\/css\/less\/widget-light.less" : {
       "ignoreWasSetByUser" : 0,
@@ -250,17 +279,6 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
-    "\/js\/custom\/jqueryExists.js" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/custom\/jqueryExists.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/jqueryExists.min.js",
-      "fileType" : 64
-    },
     "\/js\/custom\/widget.js" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -271,15 +289,6 @@
       "syntaxCheckerStyle" : 1,
       "outputAbbreviatedPath" : "\/js\/widget.min.js",
       "fileType" : 64
-    },
-    "\/tests\/jqExists\/with.html" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/tests\/jqExists\/with.html",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
     },
     "\/tests\/jqExists\/without.html" : {
       "ignoreWasSetByUser" : 0,
