--- a/codekit-config.json
+++ b/codekit-config.json
@@ -2,17 +2,6 @@
   "CodeKitInfo" : "This is a CodeKit project configuration file. It is designed to sync project settings across multiple machines. Modifying the contents of this file can be a poor life decision if you don't know what you're doing. This file is not useful unless accompanied by the project that created it in CodeKit. For more information, see: http:\/\/incident57.com\/codekit",
   "creatorBuild" : "8248",
   "files" : {
-    "\/js\/custom\/hubJS.abbrev.js" : {
-      "ignoreWasSetByUser" : 1,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/custom\/hubJS.abbrev.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/hubJS.abbrev.min.js",
-      "fileType" : 64
-    },
     "\/css\/less\/color-light.less" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -26,13 +15,33 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
+    "\/js\/custom\/hubJS.abbrev.js" : {
+      "ignoreWasSetByUser" : 1,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/custom\/hubJS.abbrev.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/js\/hubJS.abbrev.min.js",
+      "fileType" : 64
+    },
+    "\/tests\/jqExists\/with.html" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/tests\/jqExists\/with.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
+    },
     "\/css\/widget-dark.css" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
       "inputAbbreviatedPath" : "\/css\/widget-dark.css",
-      "outputAbbreviatedPath" : "No Output Path",
+      "outputAbbreviatedPath" : "\/No Output Path",
       "fileType" : 16
     },
     "\/css\/less\/color-dark.less" : {
@@ -68,17 +77,6 @@
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2048
     },
-    "\/js\/custom\/widgetCreator.js" : {
-      "ignoreWasSetByUser" : 1,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/custom\/widgetCreator.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/widgetCreator.min.js",
-      "fileType" : 64
-    },
     "\/examples\/widget.without.jquery.html" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -87,6 +85,17 @@
       "inputAbbreviatedPath" : "\/examples\/widget.without.jquery.html",
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2048
+    },
+    "\/js\/hubwidget.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/hubwidget.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/hubwidget.min.js",
+      "fileType" : 64
     },
     "\/css\/less\/type.less" : {
       "ignoreWasSetByUser" : 0,
@@ -101,15 +110,26 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
-    "\/css\/less\/widget-dark.less" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
+    "\/js\/custom\/widgetCreator.js" : {
+      "ignoreWasSetByUser" : 1,
+      "ignore" : 1,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/css\/less\/widget-dark.less",
-      "outputStyle" : 2,
+      "inputAbbreviatedPath" : "\/js\/custom\/widgetCreator.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/js\/widgetCreator.min.js",
+      "fileType" : 64
+    },
+    "\/css\/less\/utility.less" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/css\/less\/utility.less",
+      "outputStyle" : 0,
       "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "\/css\/widget-dark.css",
+      "outputAbbreviatedPath" : "\/css\/utility.css",
       "strictImports" : 0,
       "fileType" : 1,
       "debugStyle" : 0
@@ -118,11 +138,11 @@
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
       "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
+      "outputPathIsSetByUser" : 1,
       "inputAbbreviatedPath" : "\/js\/manifests\/hubwidget.js",
-      "outputStyle" : 1,
+      "outputStyle" : 0,
       "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/hubwidget.min.js",
+      "outputAbbreviatedPath" : "\/js\/hubwidget.js",
       "fileType" : 64
     },
     "\/css\/less\/variables.less" : {
@@ -138,15 +158,24 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
-    "\/css\/less\/utility.less" : {
+    "\/tests\/widgetCreator\/index.html" : {
       "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
+      "ignore" : 0,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/css\/less\/utility.less",
-      "outputStyle" : 0,
+      "inputAbbreviatedPath" : "\/tests\/widgetCreator\/index.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
+    },
+    "\/css\/less\/widget-dark.less" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/css\/less\/widget-dark.less",
+      "outputStyle" : 2,
       "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "\/css\/utility.css",
+      "outputAbbreviatedPath" : "\/css\/widget-dark.css",
       "strictImports" : 0,
       "fileType" : 1,
       "debugStyle" : 0
@@ -164,26 +193,6 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
-    "\/tests\/widgetCreator\/index.html" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/tests\/widgetCreator\/index.html",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
-    },
-    "\/js\/jquery.hubwidget.min.js" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/jquery.hubwidget.min.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/jquery.hubwidget.min.min.js",
-      "fileType" : 64
-    },
     "\/images\/widget-hubpower-light.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -199,22 +208,11 @@
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
       "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
+      "outputPathIsSetByUser" : 1,
       "inputAbbreviatedPath" : "\/js\/manifests\/jquery.hubwidget.js",
       "outputStyle" : 1,
       "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/jquery.hubwidget.min.js",
-      "fileType" : 64
-    },
-    "\/js\/hubwidget.min.js" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/hubwidget.min.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/hubwidget.min.min.js",
+      "outputAbbreviatedPath" : "\/js\/jquery.hubwidget.js",
       "fileType" : 64
     },
     "\/images\/widget-hubpower-dark.png" : {
@@ -227,44 +225,6 @@
       "outputAbbreviatedPath" : "\/images\/widget-hubpower-dark.png",
       "initialSize" : 857,
       "fileType" : 8192
-    },
-    "\/examples\/widget.with.jquery.html" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/examples\/widget.with.jquery.html",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
-    },
-    "\/css\/widget-light.css" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/css\/widget-light.css",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 16
-    },
-    "\/js\/custom\/jqueryExists.js" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/js\/custom\/jqueryExists.js",
-      "outputStyle" : 1,
-      "syntaxCheckerStyle" : 1,
-      "outputAbbreviatedPath" : "\/js\/jqueryExists.min.js",
-      "fileType" : 64
-    },
-    "\/tests\/jqExists\/with.html" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/tests\/jqExists\/with.html",
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2048
     },
     "\/css\/less\/widget-light.less" : {
       "ignoreWasSetByUser" : 0,
@@ -279,6 +239,26 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
+    "\/examples\/widget.with.jquery.html" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/examples\/widget.with.jquery.html",
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2048
+    },
+    "\/js\/jquery.hubwidget.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/jquery.hubwidget.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/jquery.hubwidget.min.js",
+      "fileType" : 64
+    },
     "\/js\/custom\/widget.js" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -289,6 +269,26 @@
       "syntaxCheckerStyle" : 1,
       "outputAbbreviatedPath" : "\/js\/widget.min.js",
       "fileType" : 64
+    },
+    "\/js\/custom\/jqueryExists.js" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/js\/custom\/jqueryExists.js",
+      "outputStyle" : 1,
+      "syntaxCheckerStyle" : 1,
+      "outputAbbreviatedPath" : "\/js\/jqueryExists.min.js",
+      "fileType" : 64
+    },
+    "\/css\/widget-light.css" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/css\/widget-light.css",
+      "outputAbbreviatedPath" : "\/No Output Path",
+      "fileType" : 16
     },
     "\/tests\/jqExists\/without.html" : {
       "ignoreWasSetByUser" : 0,
